# memorylab

./: .gitignore  README.md  pyproject.toml
examples/: basic_usage.py  evidence_ledger.py  strategy_usage.py
src/memory_lab/: __init__.py  engine.py  evaluation.py  memory.py  recipe.py  recipes.py  registry.py  schema.py
src/memory_lab/capabilities/: __init__.py  base.py  deterministic.py  llm.py  retrieval.py
src/memory_lab/models/: __init__.py  base.py  evidence_ledger.py  full_history.py  hierarchical_summary.py  llm_managed.py  rolling_summary.py
src/memory_lab/renderers/: __init__.py  base.py  compact_prompt.py  evidence_table.py  layered_prompt.py  research_brief.py
tests/: test_evidence_ledger.py  test_full_history.py  test_memory_facade.py  test_models_and_evaluation.py  test_recipe_engine.py  test_schema.py
